# struct-name

./: Cargo.toml
struct-name/: Cargo.toml
struct-name-macro/: Cargo.toml
struct-name-macro/src/: lib.rs
struct-name-macro/tests/: struct.rs
struct-name/src/: lib.rs
