[package]
name = "struct-name-macro"
description = "Derive macro for struct name"
license = "MIT"
version = "0.0.2"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
struct-name = { version = "0.0.1", path = "../struct-name" }
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
